--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@doc-gen/dg-skins",
-  "version": "0.4.0",
+  "name": "@elisra-devops/docgen-skins",
+  "version": "0.3.3",
   "description": "",
   "main": "./bin/index.js",
   "types": "./bin/index.d.ts",
