--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,12 @@
 name: "🚀 ci"
 
-on: [pull_request]
-
+on:
+  pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/**'
+      
 jobs:
   build_and_test:
     name: 🚀 build  and test
